...
                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="oYw-lh-pXY">
                                <rect key="frame" x="162" y="317" width="90" height="31"/>
                                <constraints>
                                    <constraint firstAttribute="height" constant="31" id="hzt-lg-yYx"/>
                                </constraints>
                                <state key="normal" title="Button"/>
                                <buttonConfiguration key="configuration" style="plain" title="Delete"/>
                                <connections>
                                    <action selector="deleteButtonTapped:" destination="BYZ-38-t0r" eventType="touchUpInside" id="NAq-d7-aZn"/>
                                    <action selector="saveButtonTapped:" destination="BYZ-38-t0r" eventType="touchUpInside" id="BMh-m5-Fjm"/>
                                </connections>
                            </button>
                        </subviews>
...
